# bnet_auth_tool

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  bnet_auth_tool.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  report.yml
packaging/: build_exes.py  pyi_entry_cli.py  pyi_entry_gui.py
src/bnet_auth_tool/: __init__.py  __main__.py  api.py  cli.py  config.py  crypto.py  errors.py  fileio.py  gui.py  migrate.py  settings.yaml  storage.py  totp.py
tests/: conftest.py  test_crypto.py  test_migrate.py  test_storage.py  test_totp.py
